[package]
name = "latency_measurement_tool"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-parser = {version="0.14.0", features = ["data"]}
pnet = "0.33.0"
clap = {version="4.2.7", features = ["derive"]}